# EECS568_Evaluation_of_Bayesian_Filters

./: .gitignore  README.md  detection_relay_node.py  layout_planner.ipynb  merge_bags.py  reprocess_bag_from_original_detections.sh  run.py  run_pipeline_original_detections.sh  tag_measurement_node.py
comm/: marker_publisher.py  path_publisher.py
config/: settings.yaml
filter/: EKF.py  EKF_ROS.py  InEKF.py  InEKF_ROS.py  PF.py  PF_ROS.py  UKF.py  UKF_ROS.py
mbot_mocap/: CMakeLists.txt  package.xml
mbot_mocap/src/: mbot_groundtruth_node.cpp
rviz/: default.rviz
system/: RobotState.py  RobotSystem.py  evaluation_pipeline.py  measurement_pipeline.py  runtime_monitor.py
utils/: Landmark.py  filter_initialization.py  system_initialization.py  utils.py
world/: world2d.py
